--- a/html/article1.html
+++ b/html/article1.html
@@ -16,7 +16,7 @@
             Ideas in Motion
         </div>
         <ul class="nav-links">
-            <li><a href="/html/index.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li class="dropdown">
                 <a href="#" class="dropbtn">Projects</a>
                 <div class="dropdown-content">
