--- a/html/login.html
+++ b/html/login.html
@@ -121,7 +121,7 @@
                 <img src="/logo.png" alt="Logo" style="height: 50px; vertical-align: middle;">
                 Ideas in Motion</div>
                 <ul class="nav-links">
-                    <li><a href="/html/index.html" >Home</a></li>
+                    <li><a href="/index.html" >Home</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropbtn">Projects</a>
                         <div class="dropdown-content">
